Improved part management and speed
