# kipartbase/swagger_server/controllers/controller_part_reference.py
@@ -12,11 +12,11 @@ import api.models
 def serialize_PartReference(fpart_reference, part_reference=None):
     if part_reference is None:
         part_reference = PartReference()
-    part_reference.id = fpart_reference.id
-    part_reference.type = fpart_reference.type
     part_reference.name = fpart_reference.name
     if fpart_reference.description:
         part_reference.description = fpart_reference.description
+    part_reference.manufacturer = fpart_reference.manufacturer
+    part_reference.type = fpart_reference.type
     part_reference.uid = fpart_reference.uid
     if fpart_reference.updated:
         part_reference.updated = fpart_reference.updated
@@ -25,13 +25,14 @@ def serialize_PartReference(fpart_reference, part_reference=None):
 def deserialize_PartReference(part_reference, fpart_reference=None):
     if fpart_reference is None:
         fpart_reference = api.models.PartReference()
-    if part_reference.id:
-        fpart_reference.id = part_reference.id
-    fpart_reference.type = part_reference.type
     fpart_reference.name = part_reference.name
     if part_reference.description:
         fpart_reference.description = part_reference.description
+    fpart_reference.manufacturer = part_reference.manufacturer
+    fpart_reference.type = part_reference.type
     fpart_reference.uid = part_reference.uid
+    if part_reference.updated:
+        fpart_reference.description = part_reference.updated
     return fpart_reference
 
 def find_part_references(part_id):
