# kipartbase/swagger_server/models/part_new.py
@@ -8,6 +8,7 @@ from swagger_server.models.part_distributor import PartDistributor
 from swagger_server.models.part_manufacturer import PartManufacturer
 from swagger_server.models.part_parameter import PartParameter
 from swagger_server.models.part_ref import PartRef
+from swagger_server.models.part_reference import PartReference
 from swagger_server.models.part_storage import PartStorage
 from swagger_server.models.versioned_file_ref import VersionedFileRef
 from .base_model_ import Model
@@ -21,7 +22,7 @@ class PartNew(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, name=None, description=None, comment=None, value_parameter=None, category=None, childs=None, footprint=None, symbol=None, parameters=None, distributors=None, manufacturers=None, storages=None, attachements=None):
+    def __init__(self, name=None, description=None, comment=None, value_parameter=None, category=None, childs=None, footprint=None, symbol=None, parameters=None, distributors=None, manufacturers=None, storages=None, attachements=None, references=None):
         """
         PartNew - a model defined in Swagger
 
@@ -51,6 +52,8 @@ class PartNew(Model):
         :type storages: List[PartStorage]
         :param attachements: The attachements of this PartNew.
         :type attachements: List[PartAttachement]
+        :param references: The references of this PartNew.
+        :type references: List[PartReference]
         """
         self.swagger_types = {
             'name': str,
@@ -65,7 +68,8 @@ class PartNew(Model):
             'distributors': List[PartDistributor],
             'manufacturers': List[PartManufacturer],
             'storages': List[PartStorage],
-            'attachements': List[PartAttachement]
+            'attachements': List[PartAttachement],
+            'references': List[PartReference]
         }
 
         self.attribute_map = {
@@ -81,7 +85,8 @@ class PartNew(Model):
             'distributors': 'distributors',
             'manufacturers': 'manufacturers',
             'storages': 'storages',
-            'attachements': 'attachements'
+            'attachements': 'attachements',
+            'references': 'references'
         }
 
         self._name = name
@@ -97,6 +102,7 @@ class PartNew(Model):
         self._manufacturers = manufacturers
         self._storages = storages
         self._attachements = attachements
+        self._references = references
 
     @classmethod
     def from_dict(cls, dikt):
@@ -382,4 +388,25 @@ class PartNew(Model):
         """
 
         self._attachements = attachements
+
+    @property
+    def references(self):
+        """
+        Gets the references of this PartNew.
+
+        :return: The references of this PartNew.
+        :rtype: List[PartReference]
+        """
+        return self._references
+
+    @references.setter
+    def references(self, references):
+        """
+        Sets the references of this PartNew.
+
+        :param references: The references of this PartNew.
+        :type references: List[PartReference]
+        """
+
+        self._references = references
 
