# kipartbase/swagger_server/models/part_reference.py
@@ -13,7 +13,7 @@ class PartReference(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, name=None, description=None, manufacturer=None, type=None, uid=None, updated=None, id=None):
+    def __init__(self, name=None, description=None, manufacturer=None, type=None, uid=None, updated=None):
         """
         PartReference - a model defined in Swagger
 
@@ -29,8 +29,6 @@ class PartReference(Model):
         :type uid: str
         :param updated: The updated of this PartReference.
         :type updated: datetime
-        :param id: The id of this PartReference.
-        :type id: int
         """
         self.swagger_types = {
             'name': str,
@@ -38,8 +36,7 @@ class PartReference(Model):
             'manufacturer': str,
             'type': str,
             'uid': str,
-            'updated': datetime,
-            'id': int
+            'updated': datetime
         }
 
         self.attribute_map = {
@@ -48,8 +45,7 @@ class PartReference(Model):
             'manufacturer': 'manufacturer',
             'type': 'type',
             'uid': 'uid',
-            'updated': 'updated',
-            'id': 'id'
+            'updated': 'updated'
         }
 
         self._name = name
@@ -58,7 +54,6 @@ class PartReference(Model):
         self._type = type
         self._uid = uid
         self._updated = updated
-        self._id = id
 
     @classmethod
     def from_dict(cls, dikt):
@@ -197,25 +192,4 @@ class PartReference(Model):
         """
 
         self._updated = updated
-
-    @property
-    def id(self):
-        """
-        Gets the id of this PartReference.
-
-        :return: The id of this PartReference.
-        :rtype: int
-        """
-        return self._id
-
-    @id.setter
-    def id(self, id):
-        """
-        Sets the id of this PartReference.
-
-        :param id: The id of this PartReference.
-        :type id: int
-        """
-
-        self._id = id
 
