# kipartbase/swagger_server/swagger/swagger.yaml
@@ -1158,6 +1158,10 @@ definitions:
           type: "array"
           items:
             $ref: "#/definitions/PartAttachement"
+        references:
+          type: "array"
+          items:
+            $ref: "#/definitions/PartReference"
   PartParameterDescription:
     type: "object"
     properties:
@@ -1349,21 +1353,14 @@ definitions:
     allOf:
     - $ref: "#/definitions/ManufacturerData"
     - properties:
-        id:
-          type: "integer"
-          format: "int64"
         part_name:
           type: "string"
   PartStorage:
     allOf:
     - $ref: "#/definitions/StorageData"
     - required:
-      - "id"
       - "quantity"
       properties:
-        id:
-          type: "integer"
-          format: "int64"
         quantity:
           type: "integer"
           format: "int64"
@@ -1381,10 +1378,7 @@ definitions:
   PartReference:
     allOf:
     - $ref: "#/definitions/PartReferenceData"
-    - properties:
-        id:
-          type: "integer"
-          format: "int64"
+    - {}
   PartRef:
     type: "object"
     required:
